- Enabled focus event handlers in bigdemo/wxTextCtrl.rb (Roy Sutton)
- Added default App#on_assert to wx.rb (Kevin Smith)
- Fixes to ControlWithItem, ComboBox;samples in bigdemo.rb (Roy Sutton)
- Add WXRUBY_VERBOSE build environment variable (Kevin Smith)
- Rename DEBUG build environment variable to WXRUBY_DEBUG (Kevin Smith)
- Added task descriptions to rakefiles, so rake --tasks works (Alex Fenton)
- Clean up rakefile SWIG detection to give clearer error messages (Kevin Smith)
- Fix name of Image#find_handler_mime (Roy Sutton)
- Removed duplicate declarations in wxTextCtrl.h & wxListCtrl.h (Roy Sutton)
- Added support for DC#get_text_extent (Kevin Smith)
- Fix GetTextExtent handling by adding directorout typemap (Roy Sutton)
- Fix rakewx.rb SWIG version detection (Robin Stocker)
- Minor gemspec changes (domain, email, spelling) (Kevin Smith)
- Added more wxTextCtrl- and wxTextAttr-related constants (Sean Long)
- Overhauled wxTextCtrl.h to match actual wx API (Sean Long)
- Fixed 'undefined method' error in bigdemo/wxTextCtrl (Kevin Smith)
- Renamed bigdemo from Main.rbw to bigdemo.rb (Kevin Smith)
- Removed strict dependency on redcloth to do main rake compile (Alex Fenton)
- Removed unneeded/problematic include dirs from mswin rakefile (Roy Sutton)
- Fixed TreeEvent to enable more methods (Alex Fenton)
- Fixed caret sample to not crash on certain keystrokes (Roy Sutton)
- Added comment to listbook sample that it doesn't work on Linux (Alex Fenton)
- Updated listbook sample menu id (Sean Long)
- Updated caret sample to modern coding conventions (Alex Fenton)
- Updated calendar sample to modern coding conventions (Alex Fenton)
- Bigdemo: Commented out unsupported ArtProvider methods and related 
  set_image calls (Alex Fenton)
- Added and updated doc tasks in rakefile and rake/rakedocs.rb (Alex Fenton)
- Fixed TreeCtrl class to #ifdef features not on MSW (Sean Long)
- Big fixes to TreeCtrl and added TreeItemId class (Sean Long)